<resources>
    <string name="app_name">SimonApp</string>
    <string name="simon_says">Simon Says</string>
    <string name="playButton">Play</string>
    <string name="restartString">TRY AGAIN</string>
    <string name="score_string">0</string>
    <string name="score">0</string>
    <string name="placeholder_repeat">placeholder_repeat</string>
    <string name="red_text" />
    <string name="yellow_text" />
    <string name="blue_text" />
    <string name="green_text" />
    <string name="highscore">HighScore</string>
    <string name="timer_text">timer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">RESET</string>
    <string name="playersTurn">Your turn:</string>
    <string name="simonsTurn">Simon says:</string>
    <string name="highScoreTextView">Score</string>
    <string name="startOver">Start Over</string>
    <string name="gameOver">Game Over</string>
    <string name="yourScore">Your score:</string>
    <string name="highScoreTitle">High scores:</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="score3">0</string>
    <string name="score4">0</string>
    <string name="score5">0</string>
    <string name="score6">0</string>
    <string name="score7">0</string>
    <string name="score8">0</string>
    <string name="score9">0</string>
    <string name="score10">0</string>
</resources>